--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "@types/react": "17.0.4",
     "@types/react-dom": "17.0.3",
     "@types/styled-components": "5.1.9",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^8.10.0",
+    "eslint-plugin-react": "^7.29.3",
+    "prettier": "2.5.1",
     "typescript": "^4.5.5"
   }
 }
