--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@types/node": "15.0.0",
     "@types/react": "17.0.4",
     "@types/react-dom": "17.0.3",
