--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "esnext",
     "module": "esnext",
     "jsx": "preserve",
-    "lib": ["dom", "es2017"],
+    "lib": ["DOM", "DOM.Iterable", "es2017"],
     "moduleResolution": "node",
     "allowJs": true,
     "noEmit": true,
