--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "start-server-and-test dev 3000 cypress",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "aws-amplify": "^4.3.15",
@@ -29,9 +31,11 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "babel-plugin-styled-components": "^2.0.6",
+    "cypress": "^9.5.1",
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.29.3",
     "prettier": "2.5.1",
+    "start-server-and-test": "^1.14.0",
     "typescript": "^4.5.5"
   }
 }
