--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:cypress/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -23,5 +24,8 @@
     "quotes": ["error", "double"],
     "semi": ["error", "never"],
     "react/react-in-jsx-scope": "off"
+  },
+  "globals": {
+    "cy": true
   }
 }
