--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@typescript-eslint/parser": "^5.13.0",
     "babel-plugin-styled-components": "^2.0.6",
     "cypress": "^9.5.1",
+    "cypress-localstorage-commands": "^1.7.0",
     "eslint": "^8.10.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-react": "^7.29.3",
     "prettier": "2.5.1",
     "start-server-and-test": "^1.14.0",
