--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dropzone": "^12.0.4",
     "react-hook-form": "^7.27.1",
     "react-is": "^17.0.2",
+    "react-textarea-autosize": "^8.3.3",
     "sharp": "^0.30.2",
     "styled-components": "^5.2.3",
     "uuid": "^8.3.2"
