--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aws-amplify": "^4.3.15",
+    "date-fns": "^2.28.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
