--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "cypress": "cypress open"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
+    "@types/react-redux": "^7.1.23",
     "aws-amplify": "^4.3.15",
     "date-fns": "^2.28.0",
     "next": "latest",
@@ -18,6 +20,7 @@
     "react-dropzone": "^12.0.4",
     "react-hook-form": "^7.27.1",
     "react-is": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-textarea-autosize": "^8.3.3",
     "sharp": "^0.30.2",
     "styled-components": "^5.2.3",
